cosmos/argocd/base/brachi/middleware-cow.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: cow-txt-interceptor
spec:
  plugin:
    cow-txt-plugin: {}
