cosmos/argocd/base/brachi/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: brachi
  annotations:
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.tls.certresolver: "letsencrypt"
    traefik.ingress.kubernetes.io/router.middlewares: "argocd-redirect-https@kubernetescrd,brachi-cow-txt-interceptor@kubernetescrd"
spec:
  ingressClassName: traefik
  rules:
    - host: brachi.msmetko.xyz
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: brachi
                port:
                  number: 80
